tests/paczka2/big_fuzzy/18712075.err
Error in line 15: zIQv2f A818 17,6
Error in line 27: F6C A8s8 s4,s
Error in line 30: GwpCYU9 A218 8,e
Error in line 37: GwpCYU9 A218 12,8
Error in line 43: F6C S292 58,4
Error in line 45: jFD S677 70,9
Error in line 60: F6C S292 27,43
Error in line 61: jFD S292 -1,8
Error in line 59: jFD S292 9,4
Error in line 71: GwpCYU9 S677 50,7
Error in line 70: jFD A818 91,0
Error in line 100: UGnzy A218 21,1
Error in line 92: zIQv2f S677 312,2
Error in line 106: zIQv2f S292 245,0
Error in line 110: F6C S677 92,4
Error in line 109: zIQv2f S677 48,3
Error in line 124: S292 A218 33,6
Error in line 125: S292 A818 28,6
Error in line 115: 8EdnwA A218 52,9
Error in line 137: 8EdnwA A818 6,8
Error in line 140: jFD A218 6,6
Error in line 143: GwpCYU9 S677 69,2
Error in line 153: 8EdnwA S292 41,3
Error in line 155: 8EdnwA A818 41,9
Error in line 158: 8EdnwA S292 12,3
Error in line 151: F6C A818 118,4
Error in line 166: 8EdnwA S677 165,2
Error in line 186: F6C A818 86,1
Error in line 184: GwpCYU9 A218 39,3
Error in line 197: jFD A218 54,48
Error in line 202: jFD A818 14,58
Error in line 207: zIQv2f A818 24,0
Error in line 204: GwpCYU9 S292 97,9
Error in line 203: jFD A818 51,5
Error in line 225: UGnzy A818 20,4
Error in line 237: S292 S677 63,1
Error in line 244: zIQv2f A218 1,5
